# xatch

./: .gitignore  README.rst  poetry-update.sh  pyproject.toml
docs/: .adr-dir
docs/source/: conf.py  index.rst
docs/source/_include/: .empty
docs/source/adrs/: adr-0001-use-adrs.rst
docs/source/arch/: biz.rst  index.rst  meta.rst
docs/source/arch/meta/: adr-0001-use-adrs.rst  adr-0002-use-rfcs.rst  adr-0003-use-sphinx.rst  adr-0004-use-jupyter-notebooks.rst  adr-empty.rst  rfc-0001-documentation.rst  rfc-empty.rst
docs/source/backlog/: backlog-0000-misc.rst  backlog-0001-install.rst
tests/: test_tools.py  test_xit.py
xatch/: __init__.py  tools.py
xatch/web/: __init__.py
xatch/web/api/: __init__.py  client.py  types.py
