[tool.poetry]
name = "xatch"
version = "0.1.0"
description = "Basic Python libraries and tools used for various frameworks."
readme = "README.rst"
authors = ["Medardo Antonio Rodriguez"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
