[tool.poetry]
name = "xatch"
version = "0.1.0"
description = "Common tools used for various frameworks."
readme = "README.rst"
authors = ["Medardo Antonio Rodriguez"]
license = "GPL-3.0-or-later"
repository = "https://github.com/med-merchise/xatch"
classifiers = [
    "Framework :: Xatch",
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Topic :: Software Development",
    "Topic :: APIs",
]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.23.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^4.0.1"
flake8-bugbear = "^22.4.25"
black = "^22.3.0"
isort = "^5.10.1"
pylint = "^2.14.5"
mypy = "^0.971"
ipdb = "^0.13.9"

[tool.poetry.group.test.dependencies]
pytest = "^7.1.2"
tox = "^3.25.0"
hypothesis = "^6.46.7"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
xint = {path = "../xint", extras = ["docs", "notebooks"], develop = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ['py39', 'py310']
skip-string-normalization = true
include = '\.pyi?$'
exclude = '''
    /(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
  | docs
  )/
  '''

[tool.isort]
profile = "black"
line_length = 79
src_paths = ["xatch", "tests"]
skip_gitignore = true

[tool.mypy]
ignore_missing_imports = true
