[tool.poetry]
name = "xatch"
version = "0.1.0"
description = "Basic Python libraries and tools used for various frameworks."
readme = "README.rst"
authors = ["Medardo Antonio Rodriguez"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
flake8 = "^4.0.1"
flake8-bugbear = "^22.4.25"
black = "^22.3.0"
isort = "^5.10.1"
pylint = "^2.14.5"
mypy = "^0.971"
ipdb = "^0.13.9"

[tool.poetry.group.test.dependencies]
pytest = "^7.1.2"
tox = "^3.25.0"
hypothesis = "^6.46.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
